--- a/components/html/home.html
+++ b/components/html/home.html
@@ -315,90 +315,6 @@
                   >
                     Talks About
                   </h4>
-
-                  <!-- <div class="testimonials-text" data-testimonials-text>
-                    <iframe
-                      src="https://www.linkedin.com/embed/feed/update/urn:li:share:7105940537601404929"
-                      height="400px"
-                      width="100%"
-                      frameborder="0"
-                      allowfullscreen=""
-                      title="Embedded post"
-                    ></iframe>
-                  </div>
-                </div>
-              </li>
-
-              <li class="testimonials-item">
-                <div class="content-card" data-testimonials-item>
-                  <h4
-                    class="h4 testimonials-item-title"
-                    data-testimonials-title
-                  >
-                    Machine Learning On Web
-                  </h4>
-
-                  <div class="testimonials-text" data-testimonials-text>
-                    <p>
-                      <iframe
-                        src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7147987517181513728"
-                        height="400px"
-                        width="100%"
-                        frameborder="0"
-                        allowfullscreen=""
-                        title="Embedded post"
-                      ></iframe>
-                    </p>
-                  </div>
-                </div>
-              </li>
-
-              <li class="testimonials-item">
-                <div class="content-card" data-testimonials-item>
-                  <h4
-                    class="h4 testimonials-item-title"
-                    data-testimonials-title
-                  >
-                    Text Editor React Js
-                  </h4>
-
-                  <div class="testimonials-text" data-testimonials-text>
-                    <p>
-                      <iframe
-                        src="https://www.linkedin.com/embed/feed/update/urn:li:share:7098704480770146305"
-                        height="400px"
-                        width="100%"
-                        frameborder="0"
-                        allowfullscreen=""
-                        title="Embedded post"
-                      ></iframe>
-                    </p>
-                  </div>
-                </div>
-              </li>
-
-              <li class="testimonials-item">
-                <div class="content-card" data-testimonials-item>
-                  <h4
-                    class="h4 testimonials-item-title"
-                    data-testimonials-title
-                  >
-                    Ecommerce Website Design
-                  </h4>
-
-                  <div class="testimonials-text" data-testimonials-text>
-                    <p>
-                      <iframe
-                        src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7092693807325937665"
-                        height="400px"
-                        width="100%"
-                        frameborder="0"
-                        allowfullscreen=""
-                        title="Embedded post"
-                      ></iframe>
-                    </p>
-                  </div>
-                </div> -->
               </li>
             </ul>
           </section>
@@ -689,7 +605,7 @@
                 data-category="frontend"
               >
                 <a
-                  href="https://github.com/Saikiran8844/myportfolio"
+                  href="https://saikiran8844.github.io/myportfolio/"
                   target="_blank"
                 >
                   <figure class="project-img">
