--- a/components/html/home.html
+++ b/components/html/home.html
@@ -614,13 +614,13 @@
                     </div>
 
                     <img
-                      src="../images/myprofile.PNG"
-                      alt="savior Care"
+                      src="../images/myprofile.png"
+                      alt="My Portfolio"
                       loading="lazy"
                     />
                   </figure>
 
-                  <h3 class="project-title">Portfolio</h3>
+                  <h3 class="project-title">Portfolio App</h3>
 
                   <p class="project-category">FrontEnd</p>
                 </a>
@@ -652,6 +652,33 @@
                   <p class="project-category">FrontEnd</p>
                 </a>
               </li>
+
+              <li
+              class="project-item active"
+              data-filter-item
+              data-category="backend"
+            >
+              <a
+                href="../images/Spinner.svg"
+                target=""
+              >
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img
+                    src="../images/food-API.png"
+                    alt="Food API"
+                    loading="lazy"
+                  />
+                </figure>
+
+                <h3 class="project-title">Food Recipe API</h3>
+
+                <p class="project-category">In Progress</p>
+              </a>
+            </li>
 
              
             </ul>
