--- a/components/html/welcome.html
+++ b/components/html/welcome.html
@@ -4,11 +4,11 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Document</title>
-      <link rel="stylesheet" href="./welcome.css">
+      <link rel="stylesheet" href="../css/welcome.css">
       <script> 
          setTimeout(function() {
-        window.location.href = "../components/html/home.html"; // Redirect to index.html after 5 seconds
-    }, 9000);
+      window.location.href = "./home.html"; // Redirect to index.html after 5 seconds
+    }, 8000);
      </script>
    </head>
    <body>
